# mars-rover-task

./: CMakeLists.txt  README.md
solution/: CMakeLists.txt  CommandCenter.cpp  MarsRover.cpp
solution/include/: CommandCenter.h  MarsPlateau.h  MarsPlateauImpl.h  MarsRover.h  MarsRoverTypes.h
solution/src/: CommandCenter.cpp  MarsRover.cpp
solution/utest/: CMakeLists.txt  unit_test.cpp
